11.0.2 (30-08-2023)
- Bug Fix: Fix bug in standalone and extracurricular tuitions, using the new model of calculators

11.0.1 (28-08-2023)
- Bug Fix: Fixes and improvements in registration tuition service
- Improvement: Remove superfluous check rules in PersonCustomer::switchCustomer

11.0.0 (14-08-2023)
- Improvement: Support in legacy treasury event, the account as tuition and discount tuition amount
- Improvement: Add minimum and maximum amount in tuition calculator aggregator
- Improvement: Support in the legacy treasury event, the exemption type to discount tuition amount
- Improvement: Add in the debt report invoice entries, the invoice entry code in the end
- Improvement: The academic event discount in tuition fee with treasury exemption is true by default
- New feature: Domain model for exemption by statutes
- Improvement: Unit tests for tuition payment plans calculations
- Improvement: Add new column in debt report for invoice entries, with the code of invoice entry

10.3.1 (31-07-2023)
- Refactor: Pass in the constructor, the description of legacy academic treasury event

10.3.0 (25-07-2023)
- New Feature: New tuition condition rule, to check the registration ingression year (or start execution year)
- Bug Fix: Only create tuition by force, in create academic debts strategy executed by academic debt generation rules, if the registration is to pay gratuities
- Bug Fix: In tuition importation, fix the ingression type condition rule importation
- Improvement: Allow default tuition payment plan configured with other installment calculation amounts than fixed amount type. Only check if the default tuition payment plan is fixed amount when used as indexed for ECTS calculation amount
- Refactor: Remove the check that all tuition payment plans are for only one finantial entity.
- Bug Fix: Fix installment name buider, when using the degree code

10.2.0 (18-07-2023)
- Refactor: Remove ITuitionTreasuryEvent methods from AcademicTreasuryEvent